force-app/main/default/objects/Email_Templates__c/Email_Templates__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object will be used a Global Email Templates.</description>
    <label>Email Template</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>