force-app/main/default/objects/Email_Templates__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Store the content of template.</description>
    <inlineHelpText>Content Template</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>