force-app/main/default/objects/Email_Templates__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Define template for particular group type.</description>
    <inlineHelpText>Define template for particular group type.</inlineHelpText>
    <label>Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Badges</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Stand Contractor</fullName>
            </value>
            <value>
                <fullName>Team Testing</fullName>
            </value>
            <value>
                <fullName>Welcome Email</fullName>
                <isActive>false</isActive>
                <label>Welcome Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>