force-app/main/default/objects/Email_Templates__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Define subject of the email template.</description>
    <inlineHelpText>Define subject of the email template.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>