force-app/main/default/objects/Email_Templates__c/fields/Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Code__c</fullName>
    <description>Unique code to define template</description>
    <inlineHelpText>Put the Unique code to define template</inlineHelpText>
    <label>Template Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>