force-app/main/default/objects/Email_Templates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Template_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>