force-app/main/default/objects/Email_Templates__c/listViews/Forms.listView-meta.xml
<ListView>
    <fullName>Forms</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Template_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Name__c</field>
        <operation>equals</operation>
        <value>Forms</value>
    </filters>
    <label>Forms</label>
    <language>en_US</language>
</ListView>